fix rounded corners on safari input in app.css

--- a/src/data/app.css
+++ b/src/data/app.css
@@ -26,4 +26,5 @@ html, body, main {
     scrollbar-width: none;   /* FF */
     overflow: -moz-scrollbars-none;     /* FF */
     -ms-overflow-style: none;           /* IE, Edge */
+    border-radius: 0;   /* Safari's stupid borders */
 }
